--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
-# Core ML and Computer Vision
-tensorflow-lite-runtime>=2.8.0
+# Core Computer Vision (required)
 opencv-python>=4.5.0
 numpy>=1.21.0
 pillow>=8.0.0
 
-# Raspberry Pi Camera
+# Raspberry Pi Camera (required for Pi)
 picamera2>=0.3.0
+
+# TensorFlow Lite - Platform specific installations
+# For Raspberry Pi 3: tensorflow-lite-runtime>=2.8.0
+# For development on other platforms, use regular tensorflow
+# tensorflow>=2.8.0
 
 # GUI (using Tkinter - built into Python, no extra install needed)
 # Note: Tkinter is included with Python standard library
 
-# Optional: For older camera modules
+# Optional: For older camera modules on Pi
 # picamera>=1.13
 
 # Development and utilities
-setuptools>=45.0.0 
+setuptools>=45.0.0
+
+# Optional: For performance monitoring
+psutil>=5.8.0 
